--- a/package.json
+++ b/package.json
@@ -1,51 +1,89 @@
 {
-  "name": "redux",
-  "version": "0.1.0",
+  "name": "nextjs-core",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
-    "casual": "^1.6.2",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "check-types": "tsc --pretty --noEmit",
+    "pre-commit": "npm run lint && npm run prettier && npm run check-types",
+    "test-all": "npm run lint && npm run prettier && npm run check-types && npm run build",
+    "prepare": "husky install"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "18": "^0.0.0",
+    "@ant-design/icons": "^4.7.0",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@reduxjs/toolkit": "^1.8.4",
+    "antd": "^4.22.5",
+    "antd-mobile": "^5.28.0",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "formik": "^2.2.9",
+    "formik-antd": "^2.0.4",
+    "i18next": "^21.6.14",
+    "icomoon-react": "^2.0.19",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "next": "^12.2.5",
+    "rc-table": "^7.28.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.16.1",
+    "react-is": "^17.0.2",
+    "react-player": "^2.11.0",
+    "react-query": "^3.39.2",
+    "react-quill": "^2.0.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.0.2",
+    "react-slick": "0.29.0",
+    "react-slider-swiper": "^2.0.6",
+    "react-stars": "^2.2.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.54.4",
+    "slick-carousel": "1.8.1",
+    "swiper": "^9.0.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.13.1"
-  }
+    "@next/bundle-analyzer": "^12.1.6",
+    "@next/eslint-plugin-next": "^12.2.5",
+    "@types/lodash": "^4.14.180",
+    "@types/node": "^18.7.5",
+    "@types/react": "^18.0.17",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-slick": "^0.23.10",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
+  },
+  "description": "1. Install Node version 18\r 2. Install npm\r 3. Install dependencies\r    `npm install`",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "https://sc.tinasoft.com.vn/phamminh/mk-admin.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
