--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd-mobile": "^5.28.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "formik-antd": "^2.0.4",
     "i18next": "^21.6.14",
